Fix unnecessary horizontal scrollbar

--- a/styles/app.css
+++ b/styles/app.css
@@ -17,7 +17,7 @@
 
 footer {
 	text-align: center;
-	margin: -24px;
+	margin: -16px;
 }
 #volumeSlider {
 	position: relative;
